Fix padding causing overflow on nav

--- a/src/styles/MyNavs.scss
+++ b/src/styles/MyNavs.scss
@@ -9,32 +9,8 @@
   display: flex;
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
-  &.main-nav {
-    position: fixed; 
-    transform: translateX(-15%); 
-    background-color: $my-peach;
-    width: 100%;
-    .mobile-grid {
-      .mobile-menu-button {
-        background-color: $my-peach;
-        margin-right: 20px;
-        .bar1, .bar2, .bar3 {
-          background-color: $my-aqua;
-        }
-      }
-      .mobile-menu {
-        background-color: $my-peach;
-        left: 200%;
-        li>a {
-          color: $my-aqua;
-          &:hover, &.active {
-            background-color: $my-orange;
-            color: $my-aqua;
-          }
-        }
-      }
-    }
-  }
+
+  
 
 
 
@@ -52,7 +28,7 @@
     li>a {
         color: inherit;
         text-decoration: none;
-        padding: 1rem;
+        padding: 0.9rem 1rem;
         transition: 0.4s;
         &:hover, &.active {
           color: $my-orange;
@@ -152,6 +128,59 @@
       
     }
   }
+  /*START MAIN NAVIGATION*/
+  &.main-nav {
+    position: fixed; 
+    transform: translateX(-15%); 
+    background-color: $my-orange;
+    width: 100%;
+
+    ul.standard-menu {
+      @media only screen and (max-width:$md-max) {
+        display: none;
+      }
+
+      li>a {
+        background-color: $my-orange;
+        color: $my-aqua;
+        text-decoration: none;
+        padding:0 1rem;
+        transition: 0.4s;
+        &:hover, &.active {
+          color: $my-base;
+          background-color: $my-orange;
+        }
+      }
+    }
+
+    .mobile-grid {
+      .mobile-menu-button {
+        @media only screen and (min-width: $md-max) {
+          display: none;
+        }
+        background-color: $my-orange;
+        margin-right: 20px;
+        .bar1, .bar2, .bar3 {
+          background-color: $my-aqua;
+        }
+      }
+      ul.mobile-menu {
+        @media only screen and (min-width: $md-max) {
+          display: none;
+        }
+        background-color: $my-orange;
+        left: 200%;
+        li>a {
+          color: $my-aqua;
+          &:hover, &.active {
+            background-color: $my-orange;
+            color: $my-base;
+          }
+        }
+      }
+    }
+  }
+  /*END MAIN NAVIGATION*/
   
 }
 
